--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
     <meta name="theme-color" content="#ffffff" />
 
-    <title>React App</title>
+    <title>JPText</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
